# mozilla-version

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .taskcluster.yml  .travis.yml  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  readthedocs.yml  requirements-coveralls.txt  requirements-docs.txt  requirements-docs.txt.in  requirements-test.txt  requirements-test.txt.in  requirements.txt  requirements.txt.in  setup.py  tox.ini
docs/: Makefile  conf.py  index.rst  mozilla_version.rst
maintenance/: pin.sh
mozilla_version/: __init__.py  balrog.py  errors.py  fenix.py  firefox.py  gecko.py  ios.py  maven.py  mobile.py  parser.py  version.py
mozilla_version/test/: test_balrog.py  test_default_imports.py  test_errors.py  test_fenix.py  test_firefox.py  test_gecko.py  test_ios.py  test_maven.py  test_mobile.py  test_version.py
mozilla_version/test/integration/: __init__.py  test_product_details.py
requirements/: base.in  base.txt  base_py2.in  base_py2.txt  base_py3.in  base_py3.txt  coveralls.txt  docs.in  docs.txt  local.in  local.txt  test.in  test.txt  test_py2.in  test_py2.txt  test_py3.in  test_py3.txt
